<resources>
    <string name="app_name">OneView</string>
    <string name="encryption_algorithm_rsa">RSA</string>
    <string name="sha1prng">SHA1PRNG</string>
    <string name="SSL_context_protocol">TLSv1.2</string>
    <string name="application_json">application/json</string>
    <string name="encrypted_jwe_with_sha1">"Encrypted JWE with SHA1: "</string>
    <string name="decrypted_payload">"Decrypted Payload: "</string>
    <string name="shared_config_name">com.sbi.oneview.SharedConfig</string>
    <string name="islogin">isLogin</string>
    <string name="sessionmanagement">SessionManagement</string>
    <string name="userid">USERID</string>
    <string name="password">PASSWORD</string>
    <string name="ca">ca</string>
    <string name="dialog">dialog</string>
    <string name="error_creating_sslsocketfactory">Error creating SSLSocketFactory</string>
    <string name="certificate_factory_type">X.509</string>
    <string name="error_loading_certificate">Error loading certificate</string>
    <string name="server_certificate_is_not_trusted">Server certificate is not trusted.</string>
    <string name="the_certificate_is_not_an_x_509_certificate">The certificate is not an X.509 certificate.</string>
    <string name="server_certificate_matched_one_of_the_custom_certificates">Server certificate matched one of the custom certificates.</string>
    <string name="applyCard"> Don\'t have a prepaid card yet ?<u>Apply for card</u>.</string>
    <string name="login_account">Login</string>
    <string name="hello_welcome_back_to_our_account">Please Login to your One View Account</string>
    <string name="phone_number">Phone Number</string>
    <string name="requst_otp">Request OTP</string>
    <string name="multiple_products">Multiple Products</string>
    <string name="one_prepaid">One Prepaid</string>
    <string name="one_view">One View</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="apply">Apply</string>
    <string name="nprn">National Population Register Number</string>
    <string name="passport">Passport Number</string>
    <string name="voter">Voter ID</string>
    <string name="job">NREGA Job Card</string>
    <string name="licence">Driving Licence Number</string>
    <string name="aadhar">Aadhar Number</string>
    <string name="allow_characters">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890/-</string>
    <string name="select_salutation">Select Salutation</string>
    <string name="enter_first_name">Enter First Name\n</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_mobile">Enter Mobile Number</string>
    <string name="invalid_pan_number">Enter Valid PAN Number</string>
    <string name="ovd_type_is_required">OVD Type is required</string>
    <string name="enter_aadhar_number">Enter Aadhar Number\n</string>
    <string name="invalid_aadhar_number">Invalid Aadhar Number\n</string>
    <string name="invalid_passport_number">Invalid Passport Number</string>
    <string name="enter_voter_id">Enter Voter ID\n</string>
    <string name="invalid_voter_id">Invalid Voter ID</string>
    <string name="enter_nrega_job_card_number">Enter NREGA Job Number</string>
    <string name="enter_nprn">Enter NPRN</string>
    <string name="enter_driving_licence_number">Enter Driving License Number</string>
    <string name="invalid_driving_licence_number">Invalid Driving License Number</string>
    <string name="select_the_card">Select the Card</string>
    <string name="viewAll"><u>View All</u>.</string>
    <string name="Rs">\u20B9</string>
    <string name="resendOtp"><u>Resend OTP</u></string>
    <string name="noInternet"><u>No Internet available at this moment, Please try again later.</u></string>
    <string name="eligible_topup">Eligible Balance for Topup :  <b>\u20B9</b> </string>
    <string name="last_topup">Last topup <b>₹500.00</b> on <b>03 Jan 2024</b></string>
    <string name="hotlist_reason_one">Please note that the Card will be permanently blocked after Hot listing.</string>
    <string name="hotlist_reason_two">Please visit the Nearest Branch for Issuance of New Card.</string>
    <string name="reset_pin_reason_one">The reset function will reset the existing pin of your Transit/Prepaid Card.</string>
    <string name="reset_pin_reason_two">You will be redirect to another bank portal to reset existing pin.</string>
    <string name="reset_pin_reason_three">In case of any issue please inform the contact center or visit your nearest branch.</string>
    <string name="block_note_one">Instantly stop all new transaction if you misplace your card or want extra security.</string>
    <string name="block_note_two">Easily restore all functionalities when you are ready use your card again.</string>
    <string name="transitCardInfo">\u2022 Cashless travels in all metro\n \u2022 Purchase tickets and store passes for your metro travel needs.\n\u2022 purchase tickets for busses using the same card\n  \u2022 Chip protection to ensure better security for your card.\n \u2022 Easy to use Tap-and-pay functionality</string>
    <string name="inrPrepaidCardInfo">\u2022 Maximum amount of issue Rs:2,00,000/-\n \u2022 Operable by 4 digit PIN at ATM and by PIN/Signature at merchant establishment.\n\u2022 Free balance enquiry at State bank group ATMs and Visa ATM(at a charge)\n  \u2022 Add on card not exceeding two in number to be use by the card.\n</string>
    <string name="FTCCardInfo">\u2022 Maximum amount of issue Rs:2,00,000/-\n \u2022 Operable by 4 digit PIN at ATM and by PIN/Signature at merchant establishment.\n\u2022 Free balance enquiry at State bank group ATMs and Visa ATM(at a charge)\n  \u2022 Add on card not exceeding two in number to be use by the card.\n</string>
    <string-array name="salutations_array">
        <item>Salutation *</item>
        <item>Mr</item>
        <item>Mrs</item>
        <item>Ms</item>
    </string-array>
    <string-array name="hot_list_reason_array">
        <item>Select Reason</item>
        <item>Lost</item>
        <item>Stolen</item>
        <item>Defective</item>
        <item>Fraud</item>
        <item>General</item>
    </string-array>
    <string-array name="cards_array">
        <item>Select Card *</item>
        <item>Singara Chennai</item>
        <item>Noida NMRC-City 1 Metro</item>
        <item>Mumbai-1 MMRDA Metro</item>
        <item>Nation First Transit Card</item>
        <item>Maha Card Nagpur Metro</item>
        <item>Go Smart Kanpur Metro</item>
    </string-array>
    <string-array name="ovdType_array">
        <item>Select OVD Type *</item>
        <item>Aadhar Number</item>
        <item>NREGA Job Card</item>
        <item>Driving Licence Number</item>
        <item>Passport Number</item>
        <item>Voter ID</item>
        <item>National Population Register Number</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quick_access">Quick Access</string>
    <string name="card_top_up">Card Top up</string>
    <string name="reset_pin">Reset Pin</string>
    <string name="card_hotlist">Card Hotlist</string>
    <string name="card_statement">Card Statement</string>
    <string name="my_cards">My Cards</string>
    <string name="card_details">Card Details</string>
    <string name="card_number">Card Number</string>
    <string name="no_value_dots">-----</string>
    <string name="crn">CRN</string>
    <string name="card_status">Card Status</string>
    <string name="card_product_name">Card Product Name</string>
    <string name="card_act_date">Card Act. Date</string>
    <string name="card_exp_date">Card Exp. Date</string>
    <string name="xx_xx">XX / XX</string>
    <string name="card_bal">Card Host Bal.</string>
    <string name="card_chip_bal">Card Chip Bal.</string>
    <string name="recent_transaction">Recent Transaction</string>
    <string name="card_limit">Card Limit</string>
    <string name="transit">Transit</string>
    <string name="dashboard">Dashboard</string>
    <string name="logout">Logout</string>
    <string name="my_profile">My Profile</string>
    <string name="card_management">Card Management</string>
    <string name="contact_us">Contact Us</string>
    <string name="inr_prepaid">INR Prepaid</string>
    <string name="customer_details">Customer Details</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="ovd_type">OVD Type</string>
    <string name="ovd_value">OVD Value</string>
    <string name="kyc_type">KYC Type</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="top_up">Top-up</string>
    <string name="success_transaction">Your Transaction has been successful.</string>
    <string name="failed_transaction">Your Transaction has been failed.</string>
    <string name="cong">Congratulations !</string>
    <string name="fail">Failed !</string>
    <string name="card_hotlisted">Your card has been permanently hotlisted.</string>
    <string name="login_again">Something went wrong, Please login again</string>
    <string name="how_much_would_you_like_top_up">How much would you like top-up?</string>
    <string name="_5000">5000</string>
    <string name="_10000">10000</string>
    <string name="_20000">20000</string>
    <string name="_50000">50000</string>
    <string name="card_block">Card Block</string>
    <string name="spend_limit">Spend Limit</string>
    <string name="transaction">Transactions</string>
    <string name="your_card_has_been_successfully">Your card has been block successfully</string>
    <string name="unblock_successfully">You card has been un-block successfully, now you can use your card functionalities again</string>
    <string name="max_atm">Max: \u20B9 40000.00</string>
    <string name="max_pos">Max: \u20B9 200000.00</string>
    <string name="max_EComm">Max: \u20B9 200000.00</string>
    <string name="max_ContactLess">Max: \u20B9 5000.00</string>
    <string name="FTC_max_atm">Max: \u20B9 3000.00</string>
    <string name="FTC_max_pos">Max: \u20B9 10000.00</string>
    <string name="FTC_max_EComm">Max: \u20B9 10000.00</string>
    <string name="balances">Balances</string>
    <string name="your_card_has_been_hotlisted_successfully">Your card has been hotlisted successfully</string>
    <string name="captcha">Captcha</string>
    <string name="something_went_wrong_please_refresh_captcha">SomeThing went wrong. please refresh captcha</string>
    <string name="something_went_wrong">Something went wrong, Please try again</string>
    <string name="invalid_captcha_try_again">Invalid captcha, Try again</string>
    <string name="incorrect_otp_please_try_again">Incorrect OTP, Please try again</string>
    <string name="end_to">End to</string>
    <string name="start_from">Start from</string>
    <string name="form">Form</string>
    <string name="your_selected_card_has_already_been_permanently_hotlisted_please_choose_any_other_card_to_proceed_with_hotllist">* Your selected card has already been permanently hotlisted, Please choose any other card to proceed with hotllist.</string>
    <string name="your_card_has_been_permantly_blocked">* Your card has been permantly blocked.</string>
    <string name="note">*Note:</string>
    <string name="_1">1.</string>
    <string name="_2">2.</string>
    <string name="status">Status</string>
    <string name="_26">26</string>
    <string name="dec_23">Dec 23</string>
    <string name="mmrda_topup_fee_personal">MMRDA/TOPUP FEE/Personal</string>
    <string name="txn_id_123456789">TXN Id: 123456789</string>
    <string name="_3000000000000_00">3000000000000.00</string>
    <string name="credited">Credited</string>
    <string name="_11_11_2001_1_21_am">11/11/2001 1:21 AM</string>
    <string name="piad_to_merchant_name">piad to : merchant Name</string>
</resources>