<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cardDate"
    android:layout_marginTop="@dimen/_3sdp"
    android:layout_marginBottom="@dimen/_3sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/dateLayout"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/small_card_gradient_bg"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvDayDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:text="@string/_26"
                style="@style/textstyle_14_600" />

            <TextView
                android:id="@+id/tvMonthYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/header_white_color"
                android:layout_gravity="center"
                android:text="@string/dec_23"
                style="@style/textStyle_10_400" />

        </LinearLayout>
        
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/dateLayout"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvRecievedUrl"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/mmrda_topup_fee_personal"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/cardDate"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTxnId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:text="@string/txn_id_123456789"
            android:textColor="#757575"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/cardDate"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3000000000000_00"
            android:textColor="#0A9420"
            android:layout_gravity="end"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTxnsForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credited"
            android:layout_gravity="end"
            android:textColor="#0A9420"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>