<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="?attr/actionBarSize"
    tools:context=".ui.transitScreen.CardHotlistFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <include
        layout="@layout/common_header"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">



            <TextView
                android:id="@+id/tvMyCards"
                android:text="@string/my_cards"
                style="@style/menuHeadingGradientTextStyle" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:layout_gravity="center"
                android:clipToPadding="true"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false" />

            <com.sbi.oneview.utils.CustomIndicatorView
                android:id="@+id/customIndicator"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_height="20dp"/>

            <TextView
                android:id="@+id/tvCardDetails"
                android:text="@string/card_details"
                style="@style/menuHeadingGradientTextStyle"/>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:strokeWidth="0dp"
                android:backgroundTint="@color/white"
                app:cardElevation="@dimen/_7sdp"
                android:layout_margin="@dimen/_10sdp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvCN"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:text="@string/card_number"
                        style="@style/cardDetailsHeadingTextStyle" />

                    <TextView
                        android:id="@+id/tvCardNumber"
                        app:layout_constraintTop_toBottomOf="@id/tvCN"
                        app:layout_constraintStart_toStartOf="parent"
                        android:text="@string/no_value_dots"
                        style="@style/cardDetailsValueTextStyle" />


                    <TextView
                        android:id="@+id/tvCRNTitle"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:text="@string/crn"
                        style="@style/cardDetailsHeadingTextStyle"/>

                    <TextView
                        android:id="@+id/tvCRNNumber"
                        app:layout_constraintTop_toBottomOf="@id/tvCN"
                        app:layout_constraintEnd_toEndOf="parent"
                        style="@style/cardDetailsValueTextStyle"
                        android:text="@string/no_value_dots"/>


                    <TextView
                        android:id="@+id/tvCS"
                        android:layout_marginTop="@dimen/_10sdp"
                        app:layout_constraintTop_toBottomOf="@id/tvCardNumber"
                        app:layout_constraintStart_toStartOf="parent"
                        android:text="@string/card_status"
                        style="@style/cardDetailsHeadingTextStyle"/>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/cardStatusCard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="@dimen/_13sdp"
                        app:layout_constraintTop_toBottomOf="@id/tvCS"
                        app:layout_constraintStart_toStartOf="parent">

                        <LinearLayout
                            android:id="@+id/layoutCardStatus"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/activeCardBackground"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tvCardStatus"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="@dimen/_3sdp"
                                android:layout_marginTop="@dimen/_3sdp"
                                android:layout_marginStart="@dimen/_15sdp"
                                android:layout_marginEnd="@dimen/_15sdp"
                                android:text="@string/no_value_dots"/>

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>


                    <TextView
                        android:id="@+id/tvCPN"
                        android:layout_marginTop="@dimen/_10sdp"
                        app:layout_constraintTop_toBottomOf="@id/tvCRNNumber"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:text="@string/card_product_name"
                        style="@style/cardDetailsHeadingTextStyle"/>

                    <TextView
                        android:id="@+id/tvCardProductName"
                        app:layout_constraintTop_toBottomOf="@id/tvCPN"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:textColor="#AAAAAA"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_12ssp"
                        android:maxLines="1"
                        android:gravity="end"
                        android:ellipsize="end"
                        android:layout_width="@dimen/_150sdp"
                        android:text="@string/no_value_dots"/>

                    <TextView
                        android:id="@+id/tvAD"
                        android:layout_marginTop="@dimen/_10sdp"
                        app:layout_constraintTop_toBottomOf="@id/cardStatusCard"
                        app:layout_constraintStart_toStartOf="parent"
                        android:text="@string/card_act_date"
                        style="@style/cardDetailsHeadingTextStyle"/>
                    <TextView
                        android:id="@+id/tvCardActiveDate"
                        app:layout_constraintTop_toBottomOf="@id/tvAD"
                        app:layout_constraintStart_toStartOf="parent"
                        style="@style/cardDetailsValueTextStyle"
                        android:text="@string/no_value_dots"/>

                    <TextView
                        android:id="@+id/tvED"
                        android:layout_marginTop="@dimen/_17sdp"
                        android:text="@string/card_exp_date"
                        style="@style/cardDetailsHeadingTextStyle"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvCardProductName" />
                    <ImageView
                        android:id="@+id/imgExpDate"
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvED"
                        android:src="@drawable/hide_icon"/>
                    <TextView
                        android:id="@+id/tvCardExpDate"
                        android:layout_marginEnd="@dimen/_5sdp"
                        app:layout_constraintTop_toBottomOf="@id/tvED"
                        app:layout_constraintEnd_toStartOf="@id/imgExpDate"
                        style="@style/cardDetailsValueTextStyle"
                        android:text="@string/xx_xx"/>

                    <TextView
                        android:id="@+id/tvCB"
                        android:layout_marginTop="@dimen/_10sdp"
                        app:layout_constraintTop_toBottomOf="@id/tvCardActiveDate"
                        app:layout_constraintStart_toStartOf="parent"
                        android:text="@string/card_bal"
                        style="@style/cardDetailsHeadingTextStyle"/>
                    <TextView
                        android:id="@+id/tvCardBalance"
                        app:layout_constraintTop_toBottomOf="@id/tvCB"
                        app:layout_constraintStart_toStartOf="parent"
                        style="@style/cardDetailsValueTextStyle"
                        android:text="@string/no_value_dots"/>
                    <TextView
                        android:id="@+id/tvCardBalanceSync"
                        app:layout_constraintTop_toBottomOf="@id/tvCardBalance"
                        app:layout_constraintStart_toStartOf="parent"
                        style="@style/cardDetailsValueTextStyle"/>


                    <TextView
                        android:id="@+id/tvChipB"
                        android:layout_marginTop="@dimen/_10sdp"
                        app:layout_constraintTop_toBottomOf="@id/imgExpDate"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:text="@string/card_chip_bal"
                        style="@style/cardDetailsHeadingTextStyle"/>

                    <TextView
                        android:id="@+id/tvChipBalance"
                        app:layout_constraintTop_toBottomOf="@id/tvChipB"
                        app:layout_constraintEnd_toEndOf="parent"
                        style="@style/cardDetailsValueTextStyle"
                        android:text="@string/no_value_dots"/>
                    <TextView
                        android:id="@+id/tvChipBalanceSync"
                        app:layout_constraintTop_toBottomOf="@id/tvChipBalance"
                        app:layout_constraintEnd_toEndOf="parent"
                        style="@style/cardDetailsValueTextStyle"/>

                </androidx.constraintlayout.widget.ConstraintLayout>


            </com.google.android.material.card.MaterialCardView>



            <TextView
                android:id="@+id/tvCardHotlist"
                android:text="@string/card_hotlist"
                style="@style/menuHeadingGradientTextStyle" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_60sdp"
                app:cardElevation="@dimen/_7sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvHotlistNote"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:layout_margin="@dimen/_10sdp"
                        android:textSize="@dimen/_13ssp"
                        android:textStyle="bold"
                        android:textColor="@color/failedTransaction"
                        android:text="@string/your_selected_card_has_already_been_permanently_hotlisted_please_choose_any_other_card_to_proceed_with_hotllist"/>


                    <LinearLayout
                        android:id="@+id/layoutHotlistOption"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_15sdp"
                        android:orientation="vertical">

                        <Spinner
                            android:id="@+id/spinnerHotlistReason"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:paddingLeft="@dimen/_8sdp"
                            android:overlapAnchor="false"
                            android:background="@drawable/bg_spinner_black_border"
                            android:textColor="@color/white"/>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnHotlist"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:cornerRadius="@dimen/_10sdp"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:layout_gravity="center"
                            android:text="Hotlist"
                            style="@style/purpleButtonStyle" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_marginBottom="@dimen/_5sdp"
                            android:visibility="gone"
                            android:text="@string/your_card_has_been_permantly_blocked"
                            android:textColor="@color/failedTransaction"
                            android:textStyle="bold"/>


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/note"
                            android:textStyle="bold"
                            style="@style/cardDetailsHeadingTextStyle"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/_1"
                                style="@style/cardDetailsHeadingTextStyle"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/hotlist_reason_one"
                                android:textSize="@dimen/_11ssp"
                                android:textFontWeight="500"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/_2"
                                style="@style/cardDetailsHeadingTextStyle"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/hotlist_reason_two"
                                android:textSize="@dimen/_11ssp"
                                android:textFontWeight="500"/>

                        </LinearLayout>

                    </LinearLayout>


                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>




        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    </LinearLayout>
</FrameLayout>